# LegacyLens-1

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.cursor/commands/: lbi.architecture.md
.cursor/rules/: lbi-commands.mdc  legacylens.mdc
.github/workflows/: deploy.yml  lint.yml  test.yml
docs/: GLOSSARY.md  PRD.md  README.md
docs/research/: DESIGN-DOCUMENT.md  IDENTIFY-TRADEOFFS.md  INITIAL.md  PRD-V1.md  PRD-V2.md  PRE-SEARCH-CHECKLIST.md  RECORD-ARCHITECTURE-DECISIONS.md  TECH-STACK-OPTIONS-V1.md  TECH-STACK-OPTIONS.md
docs/technology/: ARCHITECTURE-INTERFACES.md  ENVIRONMENT-AND-CONFIG.md  RAG-AND-LEGACY-PRIMER.md  TECH-STACK-GUIDE.md
src/legacylens/: __init__.py
src/legacylens/core/: __init__.py
src/legacylens/core/config/: __init__.py  settings.py
src/legacylens/core/interfaces/: __init__.py  assembler.py  chunker.py  embedder.py  indexer.py  llm_provider.py  parser.py  reranker.py  searcher.py
src/legacylens/core/models/: __init__.py  chunk.py  query.py  result.py
tests/: __init__.py
tests/core/: test_config.py  test_interfaces.py
