[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legacylens"
version = "0.1.0"
description = "RAG-powered system to query legacy enterprise codebases (COBOL, Fortran) in natural language."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Michael Habermas", email = "michael@example.com" }]
keywords = ["rag", "legacy", "cobol", "fortran", "codebase", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["src"]
