[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legacylens"
version = "0.1.0"
description = "RAG-powered system to query legacy enterprise codebases (COBOL, Fortran) in natural language."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Michael Habermas", email = "michael@example.com" }]
keywords = ["rag", "legacy", "cobol", "fortran", "codebase", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
dependencies = [
    "llama-index>=0.10.0",
    "llama-index-llms-anthropic>=0.1.0",
    "llama-index-embeddings-voyageai>=0.1.0",
    "pinecone-client>=3.0.0",
    "redis>=5.0.0",
    "neo4j>=5.0.0",
    "rich>=13.0.0",
    "pygments>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
